Fixed toolbar layout issues

--- a/frontend/src/components/Navigation/Navigation.module.css
+++ b/frontend/src/components/Navigation/Navigation.module.css
@@ -1,11 +1,6 @@
 .nav {
   background-color: white;
-  padding: 10px;
-  margin-left: 350px;
   font-size: 15px;
-  right: 100px;
-  top: 10px;
-  position: absolute;
 }
 
 .nav ul {
@@ -16,7 +11,6 @@
 
 .nav ul li {
   display: inline;
-  padding: 0 10px;
 }
 
 .link {
